<resources>
    <string name="app_name">AppMulti</string>
    <string name="enter">Enter</string>
    <string name="name">Enter your name</string>
    <string name="well">Wellcome</string>
    <string name="todo">TODO</string>
    <string name="string_todo" />
    <string name="button_Alarm">Alarm</string>
    <string name="select_time">Select time</string>
    <string name="set_alarm">Set alarm</string>
    <string name="cancle_alarm">Cancle alarm</string>
    <string name="task">Task</string>
    <string name="lucky">Lucky</string>


</resources>
