<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="251dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="352dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Select function"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="30sp"
            android:textStyle="bold"

            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/but_alarm"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_Alarm"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/but_task"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/task"
            android:textAlignment="center"

            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/but_yes_no"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="YES/NO"
            android:textAlignment="center"

            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"


        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"

        android:layout_gravity="center"

        android:layout_marginStart="31dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="20dp"

        android:gravity="center"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="45sp"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="104dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:rotation="-29"
        android:rotationY="4"
        app:srcCompat="@drawable/welcome1"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="224dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-13dp"
        android:layout_marginEnd="100dp"
        android:rotation="-33"
        app:srcCompat="@drawable/wel2"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="221dp"
        android:layout_height="122dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-27dp"
        android:layout_marginEnd="-22dp"
        android:rotation="-41"
        app:srcCompat="@drawable/wel3"
        android:contentDescription="@string/string_todo" />


</RelativeLayout>